src/test/ui/imports/reexports.stderr
error[E0364]: `foo` is private, and cannot be re-exported
  --> $DIR/reexports.rs:8:17
   |
LL |         pub use super::foo;
   |                 ^^^^^^^^^^
   |
note: consider marking `foo` as `pub` in the imported module
  --> $DIR/reexports.rs:8:17
   |
LL |         pub use super::foo;
   |                 ^^^^^^^^^^

error[E0603]: module import `foo` is private
  --> $DIR/reexports.rs:33:15
   |
LL |     use b::a::foo::S;
   |               ^^^ this module import is private
   |
note: the module import `foo` is defined here
  --> $DIR/reexports.rs:21:17
   |
LL |         pub use super::foo; // This is OK since the value `foo` is visible enough.
   |                 ^^^^^^^^^^

error[E0603]: module import `foo` is private
  --> $DIR/reexports.rs:34:15
   |
LL |     use b::b::foo::S as T;
   |               ^^^ this module import is private
   |
note: the module import `foo` is defined here
  --> $DIR/reexports.rs:26:17
   |
LL |         pub use super::*; // This is also OK since the value `foo` is visible enough.
   |                 ^^^^^^^^

warning: glob import doesn't reexport anything because no candidate is public enough
  --> $DIR/reexports.rs:9:17
   |
LL |         pub use super::*;
   |                 ^^^^^^^^
   |
note: lint level defined here
  --> $DIR/reexports.rs:1:9
   |
LL | #![warn(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0364, E0603.
For more information about an error, try `rustc --explain E0364`.
